@startuml
class Aluno {
  -id: Long
  -nome: String
  -email: String
  -cpf: String
  -rg: String
  -endereco: String
  -instituicao: Instituicao
  -curso: Curso
  -saldo: BigDecimal
  +cadastrar(): void
  +consultarContaCorrente(): void
  +consultarTransacoes(): List<Transacao>
  +resgatarVantagem(vantagem: Vantagem): void
}

class Professor {
  -id: Long
  -nome: String
  -email: String
  -cpf: String
  -departamento: Departamento
  -instituicao: Instituicao
  -saldo: BigDecimal
  +consultarContaCorrente(): void
  +consultarTransacoes(): List<Transacao>
  +enviarMoedas(aluno: Aluno, quantidade: int, motivo: String): void
}

class Instituicao {
  -id: Long
  -nome: String
  -cnpj: String
  -endereco: String
  -cursos: List<Curso>
  -departamento: List<Departamento>
  -vantagens: List<Vantagem>
}

class Curso {
  -id: Long
  -nome: String
  -alunos: List<Aluno>
}

class Departamento {
  -id: Long
  -nome: String
  -professores: List<Professor>
}

class Vantagem {
  -id: Long
  -nome: String
  -descricao: String
  -fotoUrl: String
  -custoMoedas: BigDecimal
  -empresa: Empresa
}

class Empresa {
  -id: Long
  -nome: String
  -email: String
  -cnpj: String
  -razaoSocial: String
  -endereco: String
  -saldo: BigDecimal
  -vantagem: List<Vantagem>
  +cadastrar(): void
  +cadastrarVantagem(descricao: String, foto: String, custoMoedas: int): void
}


class Transacao {
  -data: Date
  -quantidade: int
  -motivo: String
  -codigo: String
  -aluno: Aluno
  -professor: Professor
}

class Cupom {
  -id: Long
  -codigo: String
  -data: Date
  -aluno: Aluno
  -empresa: Empresa
}

Aluno "0..*" -- "1" Instituicao
Professor "0..*" -- "1" Instituicao
Professor "1" -- "0..*" Transacao 
Aluno "1" -- "0..*" Transacao
Aluno "0..*" -- "0..*" Vantagem
Vantagem "0..*" -- "1" Empresa
Aluno "0..*" -- "1" Curso
Instituicao "1" -- "0..*" Curso
Aluno "1" -- "0..*" Cupom
Empresa "1" -- "0..*" Cupom
Professor "0..*" -- "1" Departamento
Instituicao "1" -- "0..*" Departamento

@enduml
